--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -11,6 +11,16 @@ spring:
     username: root
     password: 123456
 
+eureka:
+  client:
+    register-with-eureka: true    #表示不向注册中心注册自己
+    fetch-registry: true   #表示自己就是注册中心，职责是维护服务实例，并不需要去检索服务
+    service-url:
+      #设置与eureka server交互的地址查询服务和注册服务都需要依赖这个地址
+      defaultZone: http://eureka7001.com:7001/eureka/
+  instance:
+    instance-id: payment8001
+
 mybatis:
   type-aliases-package: com.csu.excloud.entities
   mapper-locations: classpath:mapper/*.xml
