--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,10 @@
   <modules>
     <module>cloud-provider-payment8001</module>
     <module>cloud-consumer-payment80</module>
-      <module>cloud-api-common</module>
+    <module>cloud-api-common</module>
     <module>cloud-eureka-server7001</module>
+    <module>cloud-eureka-server7002</module>
+    <module>cloud-provider-payment8002</module>
   </modules>
 
   <name>Maven</name>
